--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meal-tinder",
+  "name": "flavor-match",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tinder-card": "^1.6.2",
+    "react-tinder-card": "github:3DJakob/react-tinder-card#window-undefined-fix",
     "tailwindcss": "3.3.3"
   }
 }
