--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-tinder-card": "github:3DJakob/react-tinder-card#window-undefined-fix",
     "tailwindcss": "3.3.3"
   }
